<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCauseActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/addCauseUploadData"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addCauseTitleFrame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/clearTextIconColor"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <EditText
                        android:id="@+id/addCauseTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_title"
                        android:inputType="textPersonName" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addCauseDescriptionFrame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/addCauseTitleFrame"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/clearTextIconColor"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <EditText
                        android:id="@+id/addCauseDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_description"
                        android:inputType="textMultiLine"
                        android:maxLines="6"
                        android:minLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/addCauseButtonLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/addCauseDescriptionFrame"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/addCauseUploadImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="@string/hint_uploadImage"
                        android:textColor="@color/colorPrimary"
                        app:icon="@drawable/ic_baseline_image_24"
                        app:iconTint="@color/colorPrimary"
                        app:strokeColor="@color/colorPrimaryDark"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/addCauseCaptureImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="@string/hint_captureImage"
                        android:textColor="@color/colorPrimary"
                        app:icon="@drawable/ic_baseline_photo_camera_24"
                        app:iconTint="@color/colorPrimary"
                        app:strokeColor="@color/colorPrimaryDark"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

                </LinearLayout>

                <ImageView
                    android:id="@+id/addCauseImagePreview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/addCauseButtonLinearLayout"
                    android:scaleType="centerCrop"/>

            </RelativeLayout>

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addCauseUploadData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/buttonText_add_event" />

    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>